--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,420 +2,295 @@ version: '2.1'
 
 services:
 
-  eureka-server:
-  
-    depends_on:
+#orderdetails microservice
 
-      config-service:
-
-        condition: service_healthy
-
-    restart: always
-
+  order-details:
+    build: order-details/
+    image: order-details
+    container_name: order-details
     network_mode: "host"
-
-    build: eureka-server/
-   
-    image: eureka-server
-
-    container_name: eureka-server
-
     hostname: localhost
-
     ports:
-
-      - 8761:8761
-
+      - 8081:8081
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      mongo-database:
+#        condition: service_healthy
+    restart: always
     healthcheck:
+      test: "exit 0"
+      
+#logistics microservice
 
+  logistics-service:
+    build: logistics-service/
+    image: logistics-service
+    container_name: logistics-service
+    network_mode: host
+    hostname: localhost
+    ports:
+      - 8086:8086
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      mongo-database:
+#        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0"
+
+
+#userlogin microservice
+
+  user-login:
+    build: user-login/
+    image: user-auth
+    container_name: user-login
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8082:8082
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      mysql-database:
+#        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0"
+
+#userprofile microservice
+        
+  user-profile:
+    build: user-profile/
+    image: user-profile
+    container_name: user-profile
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8070:8070
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      mongo-database:
+#        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0"
+        
+#bookservice microservice
+        
+  book-service:
+    build: book-service/
+    image: book-service
+    container_name: book-service
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8888:8888
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      mongo-database:
+#        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0"
+        
+#recommendation microservice
+        
+  recommendation:
+    build: recommendation/
+    image: recommendation
+    container_name: recommendation
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8092:8092
+#    depends_on:
+#      eureka-server:
+#        condition: service_healthy
+#      neo4j-database:
+#        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0" 
+        
+
+
+
+#eureka server
+
+  eureka-server:
+    build: eureka-server/
+    image: eureka-server
+    container_name: eureka-server
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8761:8761
+    restart: always
+    healthcheck:
+      test: "exit 0"
+    
+#config server
+    
+  config-service:
+    build: config-service/
+    image: config-server
+    container_name: config-server
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8891:8891
+    restart: always
+    healthcheck:
+      test: "exit 0"
+
+#api gateway
+
+  api-gateway:
+    build: zuul-apigateway/
+    image: api-gateway
+    container_name: api-gateway
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8080:8080
+    depends_on:
+      config-service:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: "exit 0"
+
+
+#Mysql database  
+  
+  mysql-database:
+    image: mysql:5.5
+    container_name: mysql-database
+    network_mode: "host"  
+    hostname: localhost
+    ports: 
+      - 3306:3306   
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=go_d
+      - MYSQL_PASSWORD=root
+      - MYSQL_USER=root
+    volumes:
+      - /opt/data:/var/lib/mysql
+    healthcheck:
+      test: exit 0
+        
+#Mongo database        
+        
+  mongo-database:
+    image: mongo
+    container_name: mongo-database
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 27017:27017
+    volumes:
+      - /usr/src/home:/data/db
+    healthcheck:
+      test: exit 0
+        
+#Neo4j database        
+
+  neo4j-database:
+    image: neo4j
+    container_name: neo4j-database
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 7474:7474
+      - 7687:7687
+    environment: 
+      - NEO4J_AUTH=neo4j/godeliver@12
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_dbms_shell_enabled=true
+    volumes:
+      - $HOME/neo4j/data:/data
+    healthcheck:
       test: "exit 0"
 
 
 
-  config-service:
 
-   build: config-service/
-   
-   image: config-server
-
-   container_name: config-server
-   
-   restart: always
-
-   network_mode: "host"
-
-   hostname: localhost
-
-   ports:
-
-    - 8891:8891
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-
-  api-gateway:
-
-   build: zuul-apigateway/
-   
-   image: api-gateway
-
-   container_name: api-gateway
-
-   depends_on:
-
-    config-service:
-
-     condition: service_healthy
-
-    eureka-server:
-
-     condition: service_healthy
-
-   restart: always
-
-   network_mode: "host"
-
-   hostname: localhost
-
-   ports:
-
-    - 8080:8080
-
-   healthcheck:
-
-    test: "exit 0"
-    
-
-  user-login:
-
-   build: user-login/
-   
-   image: user-auth
-
-   container_name: user-login
-   network_mode: "host"
-   hostname: localhost
-   ports:
-      - 8082:8082
-   depends_on:
-     eureka-server:
-       condition: service_healthy
-     database:
-       condition: service_healthy
-   healthcheck:
-     test: "exit 0"
-
-
-
-  database:
-  
-   container_name: mysql-login
-
-   image: mysql:5.5
-
-   ports:
-
-    - 3306:3306
-    
-   environment:
- 
-    MYSQL_ALLOW_EMPTY_PASSWORD: "true" 
-
-    MYSQL_DATABASE: go_d
-    
-    MYSQL_USER: root
-    
-   volumes:
-      - /opt/data:/var/lib/mysql
-      
-   network_mode: "host"
-   
-   hostname: localhost
-    
-   healthcheck:
-
-    test: exit 0
-
-
-
-  user-profile:
-  
-   build: user-profile/
-   
-   image: user-profile
-
-   restart: always
-
-   network_mode: host
-
-   container_name: userprofile
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8070:8070
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-
-  payment-service:
-  
-   build: payment-service/
-   
-   image: payment-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: payment-service
-
-   ports:
-
-    - 9091:9091
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-
-  cvrp-service:
-  
-   build: cvrp-service/
-   
-   image: cvrp-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: cvrp-service
-
-   ports:
-
-    - 8084:8084
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-
-  Order-details:
-  
-   build: order-details/
-   
-   image: order-details
-
-   restart: always
-
-   network_mode: host
-
-   container_name: orderdetails
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8081:8081
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-  logistics-service:
-  
-   build: logistics-service/
-   
-   image: logistics-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: logistics-service
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8086:8086
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-  mongo:
-
-   image: mongo
-
-   network_mode: host
-
-   container_name: spring-mongo
-
-   ports:
-
-    - 27017:27017
-
-   volumes:
-
-    - /usr/src/home:/data/db
-    
-   healthcheck:
-
-    test: exit 0
-
-    
-
-  book-service:
-
-   build: book-service/
-
-   image: book-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: bookservice
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8888:8888
-
-   healthcheck:
-
-    test: "exit 0"
-    
-
-  recommendation:
-  
-   build: recommendation/
-   
-   image: recommendation
-
-   restart: always
-
-   network_mode: host
-
-   container_name: recommendation
-
-   depends_on:
-
-    - neo4j
-
-   ports:
-
-    - 8092:8092
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-  neo4j:
-
-   image: neo4j
-
-   container_name: spring-neo4j
-
-   ports:
-
-    - 7474:7474
-    - 7687:7687
-
-   volumes:
-
-    - $HOME/neo4j/data:/data
-   environment: 
-    - NEO4J_AUTH=none
-
-   healthcheck:
-
-    test: "exit 0"
-
+#prometheus
 
   prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    network_mode: "host" 
+    hostname: localhost
     ports:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
-    image: prom/prometheus
-    network_mode: host 
-    hostname: localhost
     restart: always
     healthcheck:
       test: "exit 0"
+
+#grafana
 
   grafana:
     image: grafana/grafana
     container_name: grafana
-    volumes:
-      - /var/lib/grafana
-    restart: always
-    network_mode: host 
+    network_mode: "host"
     hostname: localhost
     ports:
       - 3000:3000
+    volumes:
+      - /var/lib/grafana
     environment:
-     - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-     - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-     - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: always
     healthcheck:
       test: "exit 0"
 
+        
+#zookeeper
 
   zookeeper:
-   image: wurstmeister/zookeeper
-   ports:
-    - "2181:2181"
-   restart: always
-   network_mode: host 
-   hostname: localhost
-   healthcheck:
-
-    test: "exit 0"
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 2181:2181
+    restart: always
+    healthcheck:
+      test: "exit 0"
     
-       
-  
-  kafka:
-   image: wurstmeister/kafka
-   hostname: kafka
-   container_name: kafka
-   depends_on:
-    - zookeeper
-   ports:
-    - '9092:9092'
-   environment:
-    KAFKA_ZOOKEEPER_CONNECT: 'localhost:2181'
-    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-    KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-    KAFKA_CREATE_TOPICS: "userprofile:1:1, book_details:1:1"
-   restart: always
-   network_mode: host 
-   hostname: localhost
-   healthcheck:
+#kafka
 
-    test: "exit 0"
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 9092:9092
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: 'localhost:2181'
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_CREATE_TOPICS: "userprofile:1:1, book_details:1:1"
+    restart: always
+    healthcheck:
+      test: "exit 0"
